[package]
name = "dummy-ambient-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bincode = "1.3.3"
bytes = "1.5.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
pin-project = "1.1.3"
quinn = { version = "0.10" }
rand = "0.8.5"
reqwest = "0.11.20"
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.20", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
webpki-roots = "0.23.0"
