[package]
name = "dummy-ambient-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bincode = "1.3.3"
bytes = "1.5.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
pin-project = "1.1.3"
quinn = { version = "0.10" }
rand = "0.8.5"
reqwest = "0.11.20"
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
rustls-native-certs = { version = "0.6.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.48"
tokio = { version = "1.20", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-stackdriver = "0.7.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "json", "tracing-log"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
webpki-roots = { version = "0.23.0", optional = true }

[features]
default = ["tls-webpki-roots"]
tls-native-roots = ["webpki-roots"]
tls-webpki-roots = ["webpki-roots"]
